  stand up whenever the skill activates (the skill forces the character to
  sit down). It now queues the ai sequence "sitAuto" - as a side effect,
  the config option sitAuto_hp_upper needs to be set. Example:

  sitAuto_hp_upper 90
  useSelf_skill Tension Relax {
    whenStatusInactive Tension Relax
    hp < 70%
    sp > 80%
  }

New config options:
- serverEncoding
  Specifies the server's character encoding (language). Should be one of:
     Western
     Tagalog
     Chinese
     Korean
     Russian
     Cyrillic
     Japanese
     Thai

Internal:
- Implemented the beginning of a localization framework.

Credits:
- id-mardi: fix for setPartySkillTimer
- mondlicht: teleportAuto_avoidAllPlayers bugfix.


==================
### 1.9.0
==================

*** INCOMPATIBLE CHANGES ***:
- NPC IDs are no longer supported, you must use the location syntax.
- A few more statuses have been renamed such as 'Cartboost' status renamed
  to 'Cart Boost' for consistency with the skill name.
  'Hide' to 'Hiding', too.
- \$remote_socket parameter removed from some Network/Send.pm functions:
  sendCartAdd sendCartGet
- hp, sp options now have a new format.
  hp > 50  - means more than 50hp
  hp > 50% - means more than 50 percent of you hp.
- Old hp_upper,sp_upper removed, use hp sp instead
  Old minAggressives, maxAggressives skill block options removed.
  Use aggressives instead.
- You must use the new tables/emotions.txt or emotions won't work.
  The "e" command now uses the RO client commands instead of the number.
- Vigor condensation renamed to Vigor Condensation for consistency
- equipAuto onTeleport changed to teleportAuto_equip_{slot}
  equipAuto skills is no longer used, use <skill slot>_equip_<slot>
  equipAuto syntax is changed, read below.
  equipAuto_def is removed.
- spells.txt "Big Magic (SG/LoV/MS/GX)" renamed to "Big Magic".
- avoid_ignore_# is replaced with avoidGM_ignoreList (see below)
- equipAuto misses changed to target_misses